kubernetes/overlays/minikube/streamtv-frontend/deployment_resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamtv-frontend
spec:
  template:
    spec:
      containers:
        - name: streamtv-frontend
          resources:
            requests:
              memory: 200Mi
              cpu: 500m
            limits:
              memory: 400Mi
              cpu: 1000m
