kubernetes/overlays/minikube/streamtv-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamtv-frontend
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    app: streamtv-frontend
  sessionAffinity: None
