kubernetes/overlays/minikube/streamtv-frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamtv-frontend
spec:
  rules:
    - host: streamtv.local
      http:
        paths:
          - backend:
              serviceName: streamtv-frontend
              servicePort: web
            path: /
